--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
+  rxdart:
+  http:
+  mime_type:
+  shared_preferences:
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
