--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dependencies:
   http:
   mime_type:
   shared_preferences:
-  
+  sqflite: ^1.1.7+1
+  path_provider: ^1.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
